# Neuralnet

./: .gitignore  manage.py  pyproject.toml
bert_classifier/: admin.py  apps.py  models.py  prediction.py  urls.py  views.py
bert_classifier/migrations/: 0001_initial.py
dialog_bot/: apps.py  dialog_bot.py  urls.py  views.py
dialog_bot/migrations/: 0001_initial.py  0002_auto_20220825_1834.py
image_classification/: apps.py  forms.py  models.py  prediction.py  urls.py  views.py
image_classification/migrations/: 0001_initial.py  0002_alter_image_image_class.py
neuralnet/: asgi.py  settings.py  urls.py  wsgi.py
reports/: ЛР1 Ефремов Сергей ИУ3-11М.docx  ЛР3 Ефремов Сергей ИУ3-11М.docx
templates/bert_classifier/: index.html
отчеты/: ЛР1 Ефремов Сергей ИУ3-11М.docx  ЛР2 Ефремов Сергей ИУ3-11М.docx  ЛР4 Ефремов Сергей ИУ3-11М.docx
