[project]
name = "neuralnet"
version = "0.1.0"
description = "IU_3"
authors = [
    {name = "snail",email = "sgefsnkiospch908@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "black (>=25.9.0,<26.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "django (>=5.2.6,<6.0.0)",
    "torch (>=2.8.0,<3.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
