[tool.poetry]
name = "neuralnet"
version = "0.1.0"
description = ""
authors = ["snail <sgefsnkiospch908@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
black = "^25.9.0"
isort = "^6.1.0"
django = "^5.2.7"
torch = "^2.8.0"
djangorestframework = "^3.16.1"
transformers = "^4.57.0"
torchvision = "^0.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
